build/log/idf_py_stdout_output_1223174
[1/11] Performing build step for 'bootloader'
[1/1] cd /home/shop-electronic/project/esp32/evm_java/build/bootloader/esp-idf/esptool_py && /home/shop-electronic/.espressif/python_env/idf5.1_py3.8_env/bin/python /home/shop-electronic/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/shop-electronic/project/esp32/evm_java/build/bootloader/bootloader.bin
Bootloader binary size 0x6720 bytes. 0x8e0 bytes (8%) free.
[2/11] No install step for 'bootloader'
[3/11] Completed 'bootloader'
[4/11] Building C object esp-idf/evm_modules/CMakeFiles/__idf_evm_modules.dir/evm_module_lvgl.c.obj
FAILED: esp-idf/evm_modules/CMakeFiles/__idf_evm_modules.dir/evm_module_lvgl.c.obj 
/home/shop-electronic/.espressif/tools/xtensa-esp32-elf/esp-2022r1-11.2.0/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1-dev-3141-g57c4508eb3\" -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/shop-electronic/project/esp32/evm_java/build/config -I/home/shop-electronic/project/esp32/evm_java/components/evm_modules/include -I/home/shop-electronic/esp/esp-idf/components/newlib/platform_include -I/home/shop-electronic/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/shop-electronic/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/shop-electronic/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/shop-electronic/esp/esp-idf/components/freertos/esp_additions/include -I/home/shop-electronic/esp/esp-idf/components/esp_hw_support/include -I/home/shop-electronic/esp/esp-idf/components/esp_hw_support/include/soc -I/home/shop-electronic/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/shop-electronic/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/shop-electronic/esp/esp-idf/components/esp_hw_support/port/esp32/private_include -I/home/shop-electronic/esp/esp-idf/components/heap/include -I/home/shop-electronic/esp/esp-idf/components/log/include -I/home/shop-electronic/esp/esp-idf/components/soc/include -I/home/shop-electronic/esp/esp-idf/components/soc/esp32 -I/home/shop-electronic/esp/esp-idf/components/soc/esp32/include -I/home/shop-electronic/esp/esp-idf/components/hal/esp32/include -I/home/shop-electronic/esp/esp-idf/components/hal/include -I/home/shop-electronic/esp/esp-idf/components/hal/platform_port/include -I/home/shop-electronic/esp/esp-idf/components/esp_rom/include -I/home/shop-electronic/esp/esp-idf/components/esp_rom/include/esp32 -I/home/shop-electronic/esp/esp-idf/components/esp_rom/esp32 -I/home/shop-electronic/esp/esp-idf/components/esp_common/include -I/home/shop-electronic/esp/esp-idf/components/esp_system/include -I/home/shop-electronic/esp/esp-idf/components/esp_system/port/soc -I/home/shop-electronic/esp/esp-idf/components/esp_system/port/include/private -I/home/shop-electronic/esp/esp-idf/components/xtensa/include -I/home/shop-electronic/esp/esp-idf/components/xtensa/esp32/include -I/home/shop-electronic/esp/esp-idf/components/lwip/include -I/home/shop-electronic/esp/esp-idf/components/lwip/include/apps -I/home/shop-electronic/esp/esp-idf/components/lwip/include/apps/sntp -I/home/shop-electronic/esp/esp-idf/components/lwip/lwip/src/include -I/home/shop-electronic/esp/esp-idf/components/lwip/port/include -I/home/shop-electronic/esp/esp-idf/components/lwip/port/freertos/include -I/home/shop-electronic/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/shop-electronic/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/shop-electronic/project/esp32/evm_java/components/hardware_manager/include -I/home/shop-electronic/esp/esp-idf/components/driver/include -I/home/shop-electronic/esp/esp-idf/components/driver/deprecated -I/home/shop-electronic/esp/esp-idf/components/driver/esp32/include -I/home/shop-electronic/esp/esp-idf/components/esp_pm/include -I/home/shop-electronic/esp/esp-idf/components/esp_ringbuf/include -I/home/shop-electronic/esp/esp-idf/components/fatfs/diskio -I/home/shop-electronic/esp/esp-idf/components/fatfs/vfs -I/home/shop-electronic/esp/esp-idf/components/fatfs/src -I/home/shop-electronic/esp/esp-idf/components/wear_levelling/include -I/home/shop-electronic/esp/esp-idf/components/esp_partition/include -I/home/shop-electronic/esp/esp-idf/components/sdmmc/include -I/home/shop-electronic/project/esp32/evm_java/components/lvgl -I/home/shop-electronic/project/esp32/evm_java/components/lvgl/src -I/home/shop-electronic/project/esp32/evm_java/components/mongoose/include -I/home/shop-electronic/esp/esp-idf/components/esp_timer/include -I/home/shop-electronic/esp/esp-idf/components/json/cJSON -I/home/shop-electronic/project/esp32/evm_java/components/mujs -I/home/shop-electronic/esp/esp-idf/components/nvs_flash/include -I/home/shop-electronic/esp/esp-idf/components/spi_flash/include -I/home/shop-electronic/esp/esp-idf/components/esp_wifi/include -I/home/shop-electronic/esp/esp-idf/components/esp_event/include -I/home/shop-electronic/esp/esp-idf/components/esp_phy/include -I/home/shop-electronic/esp/esp-idf/components/esp_phy/esp32/include -I/home/shop-electronic/esp/esp-idf/components/esp_netif/include -I/home/shop-electronic/project/esp32/evm_java/components/shared_hardware/include -I/home/shop-electronic/esp/esp-idf/components/esp_psram/include -I/home/shop-electronic/project/esp32/evm_java/components/lv-fs -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -mfix-esp32-psram-cache-issue -mfix-esp32-psram-cache-strategy=memw -Og -fmacro-prefix-map=/home/shop-electronic/project/esp32/evm_java=. -fmacro-prefix-map=/home/shop-electronic/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/evm_modules/CMakeFiles/__idf_evm_modules.dir/evm_module_lvgl.c.obj -MF esp-idf/evm_modules/CMakeFiles/__idf_evm_modules.dir/evm_module_lvgl.c.obj.d -o esp-idf/evm_modules/CMakeFiles/__idf_evm_modules.dir/evm_module_lvgl.c.obj -c /home/shop-electronic/project/esp32/evm_java/components/evm_modules/evm_module_lvgl.c
/home/shop-electronic/project/esp32/evm_java/components/evm_modules/evm_module_lvgl.c:25: warning: "LV_GRID_FR" redefined
   25 |  #define LV_GRID_FR 1
      | 
In file included from /home/shop-electronic/project/esp32/evm_java/components/lvgl/src/extra/layouts/lv_layouts.h:17,
                 from /home/shop-electronic/project/esp32/evm_java/components/lvgl/src/extra/lv_extra.h:17,
                 from /home/shop-electronic/project/esp32/evm_java/components/lvgl/lvgl.h:69,
                 from /home/shop-electronic/project/esp32/evm_java/components/hardware_manager/include/lcd101.h:6,
                 from /home/shop-electronic/project/esp32/evm_java/components/hardware_manager/include/hardware_manager.h:13,
                 from /home/shop-electronic/project/esp32/evm_java/components/evm_modules/include/evm_module_lvgl.h:4,
                 from /home/shop-electronic/project/esp32/evm_java/components/evm_modules/evm_module_lvgl.c:1:
/home/shop-electronic/project/esp32/evm_java/components/lvgl/src/extra/layouts/grid/lv_grid.h:27: note: this is the location of the previous definition
   27 | #define LV_GRID_FR(x)          (LV_COORD_MAX - 100 + x)
      | 
/home/shop-electronic/project/esp32/evm_java/components/evm_modules/evm_module_lvgl.c:1106:13: warning: 'js_lv_img_set_hand_pivot' defined but not used [-Wunused-function]
 1106 | static void js_lv_img_set_hand_pivot(js_State *J) {
      |             ^~~~~~~~~~~~~~~~~~~~~~~~
/home/shop-electronic/project/esp32/evm_java/components/evm_modules/evm_module_lvgl.c:960:13: warning: 'js_img_create_from_file' defined but not used [-Wunused-function]
  960 | static void js_img_create_from_file(js_State *J) {
      |             ^~~~~~~~~~~~~~~~~~~~~~~
/home/shop-electronic/project/esp32/evm_java/components/evm_modules/evm_module_lvgl.c:939:13: warning: 'js_file_exists' defined but not used [-Wunused-function]
  939 | static void js_file_exists(js_State *J) {
      |             ^~~~~~~~~~~~~~
/home/shop-electronic/project/esp32/evm_java/components/evm_modules/evm_module_lvgl.c: In function 'js_list_files':
/home/shop-electronic/project/esp32/evm_java/components/evm_modules/evm_module_lvgl.c:1060:58: error: 'snprintf' output may be truncated before the last format character [-Werror=format-truncation=]
 1060 |             snprintf(full_path, sizeof(full_path), "%s/%s", path, entry->d_name);
      |                                                          ^
/home/shop-electronic/project/esp32/evm_java/components/evm_modules/evm_module_lvgl.c:1060:13: note: 'snprintf' output 2 or more bytes (assuming 257) into a destination of size 256
 1060 |             snprintf(full_path, sizeof(full_path), "%s/%s", path, entry->d_name);
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
